commit implementando API

--- a/compra/src/main/resources/messages.properties
+++ b/compra/src/main/resources/messages.properties
@@ -10,3 +10,5 @@ NotBlank.pedido.cep={0} \u00e9 obrigat\u00f3rio.
 NotNull.pessoa.produto={0} \u00e9 obrigat\u00f3rio.
 NotNull.pessoa.valor={0} \u00e9 obrigat\u00f3rio.
 NotNull.pessoa.dataCompra={0} \u00e9 obrigat\u00f3rio.
+
+pedido.dataCompra=Data da compra
