--- a/compra/src/main/resources/messages.properties
+++ b/compra/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+NotBlank={0} \u00e9 obrigat\u00f3rio.
+NotNull={0} \u00e9 obrigat\u00f3rio.
+
 typeMismatch.javatime.OffsetDateTime={0} Deve ser uma data/hora v\u00e1lida
 typeMismatch.javatime.lang.long={0} Deve ser um n\u00famero v\u00e1lido
 
@@ -7,8 +10,8 @@ NotBlank.pedido.cpfCliente={0} \u00e9 obrigat\u00f3rio.
 NotBlank.pedido.cep={0} \u00e9 obrigat\u00f3rio.
 
 #pessoa
-NotNull.pessoa.produto={0} \u00e9 obrigat\u00f3rio.
-NotNull.pessoa.valor={0} \u00e9 obrigat\u00f3rio.
-NotNull.pessoa.dataCompra={0} \u00e9 obrigat\u00f3rio.
+NotNull.pedido.produto={0} \u00e9 obrigat\u00f3rio.
+NotNull.pedido.valor={0} \u00e9 obrigat\u00f3rio.
+NotNull.pedido.dataCompra={0} \u00e9 obrigat\u00f3rio.
 
 pedido.dataCompra=Data da compra
